<resources>
    <string name="app_name">MAD2023_Team2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TravelWise</string>
    <string name="nav_header_subtitle">TravelWise@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">TravelWise</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_accommodations">Accommodation</string>
    <string name="menu_attractions">Browse Attractions</string>
    <string name="carpark_availability">Carpark Availability</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_string">""</string>
    <string name="checkin_date">CHECK IN DATE</string>
    <string name="checkout_date">CHECK OUT DATE\n</string>
    <string name="menu_checkout_cart">checkout_cart</string>
    <string name="Customer_details">Customer Details</string>
    <string name="Price_Details">Price Details</string>
    <string name="Total_Price">Total Price :</string>
    <string name="Contact_Details">Contact Details</string>
    <string name="confirmation_describtion">This is where your confirmation will be sent</string>
    <string name="First_Name">First Name</string>
    <string name="Last_name">Last Name\n</string>
    <string name="Email">Email\n</string>
    <string name="Mobile_Number">Mobile Number\n</string>
    <string name="Country_of_residence">Country of residence\n</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Guest_Information">Guest Information\n</string>
    <string name="terms_and_conditions">By proceeding with this booking , I agree to Terms Of Use and Privacy Policy.</string>
    <string name="Proceed_to_payment">Proceed to payment</string>
    <string name="Proceed_to_cart">Proceed to cart</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="more_details">Details\n</string>

    //checkout_cart_sqllite//

    <string name="CustomerName">Customer Name</string>
    <string name="CustomerAge">Age</string>
    <string name="ActiveCustomer">Active Customer\n\n</string>
    <string name="Rating">Rating</string>
    <string name="popup_address">Address\n</string>
    <string name="contact_us">Contact Us</string>
    <string name="travel_wise_faq_gmail_com">travel.wise.faq@gmail.com</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="select">Select Item</string>
    <string name="my_map_api_key">AIzaSyAJ16Z0HmlLb_rQxb6yc6jc_XWm9KUDHuQ</string>
</resources>